--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 				<p class="profile-pic">
 					<img  class="profile-pic" style="width:15%" src="images/aj.jpg" />
 				</p>
-				<div id="caption" style="text-align: center; ">Hello, my name is Alim Gaulani. I am currently a Junior at Depaul University. I am studying in Sports Management. Some things I do outside of school is play sports, video games and serve in my community. In the future, I would like to work for the Chicago Bears. Tbh I am a bum but its okay because I accepted how bad I am at Overwatch compared to my dear friend Shayan Saleem. He is a god at widow. But, yeah this is my blog that I won't be really using. 
+				<div id="caption" style="text-align: center; ">Hello, my name is Alim Gaulani. I am currently a Senior at Depaul University pursueing a degree in Sports Management. Some of my hobbies are playing sports, video games and volunteering in my community. This blog will discuss topics that challenge our beliefs and talk about my experience in college. In the future, I would like to work for the Chicago Bears but have no foundation on what I need to do.
 				</div>
 				<div id="social-media">
 					<h3>Follow me: </h3>
-					<div id="twitter" style="display: inline;">Twitter: <a href="https://twitter.com/Shayau_12"> shayau12 </a></br> </div>
-					<div id="instagram" style="display: inline;">Instagram: <a href="https://www.instagram.com/shayau12/"> shayau12 </a></br></div>
+					<div id="twitter" style="display: inline;">Twitter: <a href="https://twitter.com/Shermmm_25"> AlimFromStateFarm </a></br> </div>
+					<div id="instagram" style="display: inline;">Instagram: <a href="https://www.instagram.com/alimfromstatefarm/"> alimfromstatefarm </a></br></div>
 					<div id="email" style="display: inline;">Email: <a href="mailto:shayau12@gmail.com"> shayau12@gmail.com </a></div>
 				
 				</div>
